# SuiteSparse

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  root-cmakelists.yaml
AMD/: CMakeLists.txt
BTF/: CMakeLists.txt
CAMD/: CMakeLists.txt
CCOLAMD/: CMakeLists.txt
CHOLMOD/: CMakeLists.txt
COLAMD/: CMakeLists.txt
CSparse/: CMakeLists.txt
CXSparse/: CMakeLists.txt
CXSparse/Config/: CXSparseConfig.cmake.in
Example/: CMakeLists.txt
GPUQREngine/: CMakeLists.txt
GraphBLAS/: CMakeLists.txt
KLU/: CMakeLists.txt
LDL/: CMakeLists.txt
Mongoose/: CMakeLists.txt
RBio/: CMakeLists.txt
SPEX/: CMakeLists.txt
SPQR/: CMakeLists.txt
SPQR/GPUQREngine/: CMakeLists.txt
SPQR/SPQRGPU/: CMakeLists.txt
SuiteSparse_GPURuntime/: CMakeLists.txt
SuiteSparse_config/: CMakeLists.txt
SuiteSparse_config/cmake_modules/: SuiteSparsePolicy.cmake
UMFPACK/: CMakeLists.txt
